CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
PROJECT(freenect2_test)

SET(CMAKE_BUILD_TYPE Debug)

FIND_PACKAGE(PNG)

SET(freenect2_LIBRARIES libfreenect2.so)
LINK_DIRECTORIES(/usr/local/lib)

SET(FRAME_LIB_SOURCES
  frames_io.h
  frames_io.cpp)

INCLUDE_DIRECTORIES(/usr/local/include)

SET(Protonect_LIBRARIES ${freenect2_LIBRARIES})

IF(PNG_FOUND)
  INCLUDE_DIRECTORIES(${PNG_INCLUDE_DIRS})
  LIST(APPEND Protonect_LIBRARIES ${PNG_LIBRARIES})
  ADD_DEFINITIONS(-DSAVE_WITH_LIBPNG=1)
ENDIF()

ADD_LIBRARY(frame_library ${FRAME_LIB_SOURCES})

ADD_EXECUTABLE(Protonect Protonect.cpp)
TARGET_LINK_LIBRARIES(Protonect ${Protonect_LIBRARIES})

ADD_EXECUTABLE(Recorder main.cpp)
TARGET_LINK_LIBRARIES(Recorder ${Protonect_LIBRARIES} frame_library)
